--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="google-site-verification" content="ksP9r5n57DuVSrMoPDENEIBHannLwcQzYrTnoiGv-18" />
+  <meta name="msvalidate.01" content="89E119164B044B0B4EE80A50AB60418E" />
   <meta name="title" content="Garmin eTrex 10 Handheld GPS – Ultimate Rugged Navigation Companion" />
   <meta name="description" content="Discover everything about the Garmin eTrex 10 Handheld GPS. Learn how this reliable, compact, and rugged navigation tool supports your outdoor adventures with durable performance." />
   <title>Garmin eTrex 10 Handheld GPS – Ultimate Rugged Navigation Companion</title>
